# Quant

./: .gitignore  CLAUDE.md  LPPL_MODEL.md  Makefile  README.md  TRADING_SIGNALS.md  pyproject.toml
.claude/: settings.json
src/quant/: __init__.py
src/quant/data/: __init__.py  fetcher.py  kosdaq150.py  kospi200.py
src/quant/factors/: __init__.py  base.py  momentum_factor.py
src/quant/factors/momentum/: __init__.py  adx.py  bollinger.py  cci.py  macd.py  mfi.py  roc.py  rsi.py  stochastic.py  volume.py  williams_r.py
src/quant/models/: __init__.py  lppl.py
tests/: __init__.py  test_factors.py
web/: README.md
web/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
web/apps/accounts/migrations/: 0001_initial.py  0002_delete_analysishistory.py
web/apps/api/: apps.py  urls.py  views.py
web/apps/stocks/: __init__.py  admin.py  apps.py  lppl_cache_service.py  models.py  services.py  sync_service.py  urls.py  views.py
web/apps/stocks/management/commands/: sync_stock_data.py
web/apps/stocks/migrations/: 0001_initial.py  0002_synclog_stockcache_is_kospi200_and_more.py  0003_lppl_analysis_cache.py  0004_momentum_factor_score.py  0005_add_kosdaq150_support.py  0006_market_index.py
web/config/: asgi.py  settings.py  urls.py  wsgi.py
web/static/css/: style.css
web/static/js/: chart.js
web/templates/: base.html
web/templates/accounts/: history.html  login.html  register.html  watchlist.html
web/templates/stocks/: dashboard.html  screener.html  search_results.html  stock_detail.html
